rmongodb NEWS
========================================================
March 20, 2014
* rmongodb now builds new libbson withou error (functionality not yet integrated in code). This is preparation for better JSON2BSON conversion.

March 06, 2014
* new CRAN submission
* rmongodb cheat sheet added to package

March 03, 2014
* rmongodb now provides more support for MongoDB Aggregation Framework: mongo.aggregation() - thanks to "dselivanov"

February 28, 2014
* vignette fixes and improvements
* mongo.insert.batch error checks added

February 24, 2014
* rmongodb now depends on plyr for some tests
* mongo.bson.to.Robject introduced: this function now holds the old functionality of mongo.bson.to.list
* mongo.bson.to.list now returns in all cases a list!

February 20, 2014
* vignette improved and now independent of running MongoDB
* second vignette with Advanced rmongodb Topics added

February 20, 2014
* new CRAN submission
* now in default mongo.bson.to.list returns a list. This can be changed using the simplify=TRUE option
* preparing src directory structure for new mongo and bson C libraries
* adding Makevars
* first version of vignette added

January 29, 2014
* switching from RJSONIO to jsonlite - solves many issues converting JSON to R
* moving RJSONIO / jsonlite to IMPORTS

December 16, 2013
* RUnit test bugfix for errors in test_find

December 13, 2013
* mongo.distict is back to package including tests

November 25, 2013
* version dump and new CRAN submission
* more tests for JSON input
* mongo.findOne as alias for mongo.find.one

November 24, 2013
* using more stable RJSONIO
* package builds without locally installe mongodb
* everywhere direkt JSON queries (incl. sort and field) are enabled
* mongo.is.connected check added to all function for more stability

November 22, 2013
* finalizing first version of RUnit test (all old tests are now RUnit Tests)

November 20, 2013
* bugfix for boolean BSON values (github Issue #18)

November 4, 2013