@@ -1,8 +1,8 @@
 Package: rmongodb
 Type: Package
 Title: R-MongoDB driver
-Version: 1.7.1
-Date: 2014-03-20
+Version: 1.7.2
+Date: 2014-07-29
 Depends:
     R (>= 2.10)
 Imports:
