@@ -50,6 +50,7 @@ export(mongo.bson.eoo)
 export(mongo.bson.find)
 export(mongo.bson.from.JSON)
 export(mongo.bson.from.buffer)
+export(mongo.bson.from.df)
 export(mongo.bson.from.list)
 export(mongo.bson.int)
 export(mongo.bson.iterator.create)
